--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -39,7 +39,7 @@
 
                 <TextView
                     android:id="@+id/routeName"
-                    android:paddingLeft="30dp"
+                    android:paddingLeft="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -48,7 +48,8 @@
                     android:textSize="17sp"
                     android:textStyle="bold"
                     android:autoSizeTextType="uniform"
-                    android:layout_marginEnd="1dp"/>
+                    android:layout_marginEnd="1dp"
+                    android:paddingEnd="10dp"/>
 
                 <TextView
                     android:id="@+id/organizationNameText"
