--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -199,7 +199,7 @@
             android:layout_width="350dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_marginTop="340dp"
+            android:layout_marginTop="310dp"
             android:background="@color/white" />
     </LinearLayout>
 
@@ -211,15 +211,27 @@
             android:layout_width="350dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_marginTop="460dp"
+            android:layout_marginTop="430dp"
+            android:background="@color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <View
+            android:layout_width="350dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="552dp"
             android:background="@color/white" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="400dp"
-        android:layout_height="330dp"
+        android:layout_height="370dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="320dp"
         android:layout_marginRight="40dp"
         android:orientation="vertical">
 
@@ -242,7 +254,8 @@
             android:gravity="center"
             android:maxLines="1"
             android:textColor="#048C94"
-            android:textSize="23dp" />
+            android:textSize="23dp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/RUTASProfileText"
@@ -264,24 +277,47 @@
             android:gravity="center"
             android:maxLines="1"
             android:textColor="#048C94"
-            android:textSize="23dp" />
+            android:textSize="23dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/MISRUTASProfileText"
+            style="@style/LargeTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="Mis rutas"
+            android:textColor="#A6ACAF"
+            android:textSize="22dp" />
 
         <ImageButton
             android:id="@+id/btn_my_routes"
             style="@style/LargeButtonText"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="40dp"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:src="@drawable/myroutes"
             android:textAlignment="center"
             android:textColor="@color/white"
-            app:backgroundTint="@color/colorPrimary" />
-
-
+            app:backgroundTint="@color/white" />
     </LinearLayout>
 
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        app:lottie_fileName="anim_myroute.json"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="585dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginEnd="150dp"/>
 </RelativeLayout>
