--- a/app/src/main/res/layout/activity_route_runner_ordered.xml
+++ b/app/src/main/res/layout/activity_route_runner_ordered.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".RouteRunnerOrderedActivity">
 
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -13,10 +14,10 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/TextNextRoute"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitleRoutingActivity"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".MainActivity" />
-
 
     <TextView
         android:id="@+id/TextNextRoute"
@@ -28,33 +29,30 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/map" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textViewTitleRoutingActivity"
+        style="@style/LargeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Nombre de la Ruta"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        style="@style/LargeTextView"
+        android:layout_marginTop="35dp"
         android:autoSizeTextType="uniform"
-        android:layout_marginStart="20dp"
+        android:text="Nombre de la Ruta"
         android:textAlignment="center"
-        android:layout_marginEnd="80dp"/>
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/buttonCancelRoute"
         android:layout_width="43dp"
         android:layout_height="39dp"
-        android:layout_marginEnd="15dp"
         android:src="@android:drawable/ic_delete"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@android:drawable/ic_delete"
-        android:layout_marginTop="0dp"/>
+        tools:src="@android:drawable/ic_delete" />
 </androidx.constraintlayout.widget.ConstraintLayout>
